--- a/index.html
+++ b/index.html
@@ -1,56 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <title>Input to Paragraph</title>
-    <style>
-        body {
-            background-color: #303030;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .container {
-            text-align: center;
-        }
-        #outputDiv {
-            margin-top: 20px;
-        }
-    </style>
+    <meta name="description" content="Personal website of Mohamad AlHariri">
+    <title>Mohamad AlHariri - Personal Website</title>
+    <link rel="stylesheet" href="profile.css">
 </head>
-<body>
-    <div class="container">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="inputText" placeholder="Enter text here">
-            <label class="mdl-textfield__label" for="inputText">Enter text</label>
-        </div>
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="displayText()">
-            Submit
-        </button>
-        <div id="outputDiv">
-          <p id="outputText"></p>
-        </div>
-    </div>
 
-    <script>
-        function displayText() {
-            var inputText = document.getElementById("inputText").value;
-            var outputDiv = document.getElementById("outputDiv");
-            var newParagraph = document.getElementById("outputText");
-            newParagraph.textContent = inputText;
-        }
-      
-        function callAi(inputText) {
-          
-        }
-    </script>
-    <script src="a.js"></script>
+<body>
+    <!-- Fixed Header -->
+    <header>
+        <ul>
+            <li><img src="profile.jpg" alt="profile" class="profile-image"> Mohamad AlHariri</li>
+            <li>| Address: Bahnhofstrasse 4, 35390 Gießen</li>
+            <li>| Email: <a href="mailto:mostoptimal@hotmail.com">mostoptimal@hotmail.com</a></li>
+            <li>| Phone: (+49) 0160-3436802</li>
+        </ul>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- About Me Section -->
+    <section id="about">
+        <div class="card">
+            <h2>About Me</h2>
+            <p>Hello! I am Mohamad AlHariri, an aspiring IT professional currently studying at Technische Hochschule
+                Mittelhessen Gießen. I enjoy improving my social skills and working with people, which complements my
+                technical knowledge.</p>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education">
+        <div class="card">
+            <h2>Education</h2>
+            <ul>
+                <li>Informatics (01.10.2019 - Present) - Technische Hochschule Mittelhessen Gießen</li>
+                <li>Goethe C1 Certificate (29.04.2019 - 19.07.2019) - Volkshochschule Gießen</li>
+                <li>B2 Level German (21.08.2017 - 15.12.2017) - DEKRA Akademie GmbH</li>
+                <li>Informatics (Sep 2009 - Apr 2012) - Damascus University</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience">
+        <div class="card">
+            <h2>Experience</h2>
+            <ul>
+                <li>IT-Admin Assistant (11.2023 - 11.2024) - Johanniter-Unfall-Hilfe e.V.</li>
+                <li>Emails & Website Text Support (2010 - 2012) - Alsalamat Co (Syria)</li>
+                <li>Self-employed Computer Technician (2009 - 2011) - Syria</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <div class="card">
+            <h2>Skills</h2>
+            <ul>
+                <li>Languages: German (C1), English (Intermediate), Arabic (Native)</li>
+                <li>Operating Systems: Windows, Linux</li>
+                <li>Software/Hardware Diagnosis and Repair</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="card">
+            <h2>Contact Me</h2>
+            <form action="#" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Mohamad AlHariri</p>
+    </footer>
+
+    <script src="profile.js"></script>
 </body>
+
 </html>
