change: personalize the Webpage

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <main>
         <section id="home">
             <div class="hero">
-                <h1>John Doe</h1>
-                <h2>Web Developer & Designer</h2>
-                <p>Crafting beautiful and functional websites</p>
+                <h1>Mohamad Alhariri</h1>
+                <h2>Software Developer (Junior)</h2>
+                <p>programming Softwares and Websites & like Challenges</p>
                 <a href="#contact" class="cta-button">Get in Touch</a>
             </div>
         </section>
