--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="about">
             <h2>About Me</h2>
             <div class="about-content">
-                <img src="profile-picture.jpg" alt="John Doe" class="profile-pic">
+                <img src="/images/profile.jpg" alt="John Doe" class="profile-pic">
                 <p>Hello! I'm Mo, a web developer with Entry Level of experience in creating responsive and user-friendly websites. I love turning complex problems into simple, beautiful, and intuitive designs.</p>
             </div>
         </section>
