change: Changed some Details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mo Doe - Web Developer Portfolio</title>
+    <title>Mohamad Alhariri - Software Developer Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -34,7 +34,7 @@
         <section id="about">
             <h2>About Me</h2>
             <div class="about-content">
-                <img src="/images/profile.jpg" alt="John Doe" class="profile-pic">
+                <img src="/images/profile.jpg" alt="Mohamad Alhariri" class="profile-pic">
                 <p>Hello! I'm Mo, a web developer with Entry Level of experience in creating responsive and user-friendly websites. I love turning complex problems into simple, beautiful, and intuitive designs.</p>
             </div>
         </section>
@@ -93,7 +93,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 John Doe. All rights reserved.</p>
+        <p>&copy; 2024 Mohamad Alhariri. All rights reserved.</p>
         <div class="social-links">
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
