change: Profile Picture added, toggle Icon idded in the Footer

--- a/index.html
+++ b/index.html
@@ -1,106 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./images/profile.jpg" type="image/x-icon">
     <title>Mohamad Alhariri - Software Developer Portfolio</title>
-    <link rel="stylesheet" href="portfolio.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="portfolio.css" />
+    <script
+      src="https://kit.fontawesome.com/1780cc454e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="logo">MH</div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <div class="logo">MH</div>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <section id="home">
-            <div class="hero">
-                <h1>Mohamad Alhariri</h1>
-                <h2>Software Developer (Junior)</h2>
-                <p>programming Softwares and Websites & like Challenges</p>
-                <a href="#contact" class="cta-button">Get in Touch</a>
-            </div>
-        </section>
+      <section id="home">
+        <div class="hero">
+          <h1>Mohamad Alhariri</h1>
+          <h2>Software Developer (Junior)</h2>
+          <p>programming Softwares and Websites & like Challenges</p>
+          <a href="#contact" class="cta-button">Get in Touch</a>
+        </div>
+      </section>
 
-        <section id="about">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <img src="./images/profile.jpg" alt="Mohamad Alhariri" class="profile-pic">
-                <p>Hello! I'm Mo, a web developer with Entry Level of experience in creating responsive and user-friendly websites. I love turning complex problems into simple, beautiful, and intuitive designs.</p>
-            </div>
-        </section>
+      <section id="about">
+        <h2>About Me</h2>
+        <div class="about-content">
+          <img
+            src="./images/profile.jpg"
+            alt="Mohamad Alhariri"
+            class="profile-pic"
+          />
+          <p>
+            Hello! I'm Mo, a web developer with Entry Level of experience in
+            creating responsive and user-friendly websites. I love turning
+            complex problems into simple, beautiful, and intuitive designs.
+          </p>
+        </div>
+      </section>
 
-        <section id="skills">
-            <h2>My Skills</h2>
-            <div class="skills-grid">
-                <div class="skill-item">
-                    <i class="fab fa-html5"></i>
-                    <h3>HTML5</h3>
-                </div>
-                <div class="skill-item">
-                    <i class="fab fa-css3-alt"></i>
-                    <h3>CSS3</h3>
-                </div>
-                <div class="skill-item">
-                    <i class="fab fa-js"></i>
-                    <h3>JavaScript</h3>
-                </div>
-                <div class="skill-item">
-                    <i class="fab fa-react"></i>
-                    <h3>React</h3>
-                </div>
-                <!-- Add more skills as needed -->
-            </div>
-        </section>
+      <section id="skills">
+        <h2>My Skills</h2>
+        <div class="skills-grid">
+          <div class="skill-item">
+            <i class="fab fa-html5"></i>
+            <h3>HTML5</h3>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-css3-alt"></i>
+            <h3>CSS3</h3>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-js"></i>
+            <h3>JavaScript</h3>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-react"></i>
+            <h3>React</h3>
+          </div>
+          <!-- Add more skills as needed -->
+        </div>
+      </section>
 
-        <section id="projects">
-            <h2>My Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <img src="project1.jpg" alt="Project 1">
-                    <h3>E-commerce Website</h3>
-                    <p>A fully responsive online store built with React and Node.js</p>
-                    <a href="#" class="project-link">View Project</a>
-                </div>
-                <div class="project-card">
-                    <img src="project2.jpg" alt="Project 2">
-                    <h3>Portfolio Template</h3>
-                    <p>A customizable portfolio template for creatives</p>
-                    <a href="#" class="project-link">View Project</a>
-                </div>
-                <!-- Add more project cards as needed -->
-            </div>
-        </section>
+      <section id="projects">
+        <h2>My Projects</h2>
+        <div class="projects-grid">
+          <div class="project-card">
+            <img src="project1.jpg" alt="Project 1" />
+            <h3>E-commerce Website</h3>
+            <p>A fully responsive online store built with React and Node.js</p>
+            <a href="#" class="project-link">View Project</a>
+          </div>
+          <div class="project-card">
+            <img src="project2.jpg" alt="Project 2" />
+            <h3>Portfolio Template</h3>
+            <p>A customizable portfolio template for creatives</p>
+            <a href="#" class="project-link">View Project</a>
+          </div>
+          <!-- Add more project cards as needed -->
+        </div>
+      </section>
 
-        <section id="contact">
-            <h2>Get in Touch</h2>
-            <form class="contact-form">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
+      <section id="contact">
+        <h2>Get in Touch</h2>
+        <form class="contact-form">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <textarea
+            name="message"
+            placeholder="Your Message"
+            required
+          ></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+      </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Mohamad Alhariri. All rights reserved.</p>
-        <div class="social-links">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
+      <p>&copy; 2024 Mohamad Alhariri. All rights reserved.</p>
+      <div class="social-links">
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a><i id="brightness" class="fa-solid fa-toggle-off"></i></a>
+      </div>
     </footer>
 
     <script src="portfolio.js"></script>
-</body>
+  </body>
 </html>
