change: some Enhancements

--- a/index.html
+++ b/index.html
@@ -61,20 +61,31 @@
           <div class="skill-item">
             <i class="fab fa-html5"></i>
             <h3>HTML5</h3>
+            <p>⭐⭐⭐⭐</p>
+            <dialog>Hello</dialog>
           </div>
           <div class="skill-item">
             <i class="fab fa-css3-alt"></i>
             <h3>CSS3</h3>
+            <p>⭐⭐⭐</p>
           </div>
           <div class="skill-item">
             <i class="fab fa-js"></i>
             <h3>JavaScript</h3>
+            <p>⭐⭐⭐</p>
           </div>
           <div class="skill-item">
-            <i class="fab fa-react"></i>
-            <h3>React</h3>
+            <i class="fa-brands fa-python"></i>
+            <h3>Python</h3>
+            <p>⭐</p>
           </div>
           <!-- Add more skills as needed -->
+          <div class="skills-grid">
+            <div class="skill-item">
+              <i class="fab fa-html5"></i>
+              <h3>C / C++ / C#</h3>
+              <p>⭐⭐</p>
+            </div>
         </div>
       </section>
 
@@ -83,13 +94,13 @@
         <div class="projects-grid">
           <div class="project-card">
             <img src="project1.jpg" alt="Project 1" />
-            <h3>E-commerce Website</h3>
+            <h3>Just an Example Project</h3>
             <p>A fully responsive online store built with React and Node.js</p>
             <a href="#" class="project-link">View Project</a>
           </div>
           <div class="project-card">
             <img src="project2.jpg" alt="Project 2" />
-            <h3>Portfolio Template</h3>
+            <h3>Another Example</h3>
             <p>A customizable portfolio template for creatives</p>
             <a href="#" class="project-link">View Project</a>
           </div>
