changed the Project Card into real project: the Bookmark Project

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <body>
     <header>
       <nav>
-        <div class="logo">MH</div>
+        <div class="logo">
+          <img src="/images/profile.jpg" alt="MH">
+        </div>
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -48,9 +50,9 @@
             class="profile-pic"
           />
           <p>
-            Hello! I'm Mo, a web developer with Entry Level of experience in
-            creating responsive and user-friendly websites. I love turning
-            complex problems into simple, beautiful, and intuitive designs.
+            Hello! I'm <strong>Mo</strong>, a Junior developer with Entry Level of experience in
+            creating responsive and user-friendly websites. 
+            I love turning complex problems into simple, beautiful, and intuitive designs.
           </p>
         </div>
       </section>
@@ -84,7 +86,7 @@
             <div class="skill-item">
               <i class="fab fa-html5"></i>
               <h3>C / C++ / C#</h3>
-              <p>⭐⭐</p>
+              <p>⭐</p>
             </div>
         </div>
       </section>
@@ -93,17 +95,20 @@
         <h2>My Projects</h2>
         <div class="projects-grid">
           <div class="project-card">
-            <img src="project1.jpg" alt="Project 1" />
-            <h3>Just an Example Project</h3>
-            <p>A fully responsive online store built with React and Node.js</p>
-            <a href="#" class="project-link">View Project</a>
+            <img src="/images/Bookmark_Manager.png" alt="Bookmark manager" />
+            <h3>Bookmark Manager</h3>
+            <p>A project I started to learn Django (Python) with a real world example</p>
+            <a href="#" class="project-link">Not Live yet ...</a>
+              <a href="https://github.com/mostoptimal/the_bookmarks_project" class="project-link tooltip"><i class="fa-brands fa-github"><span class="tooltiptext">The Project on Github</span></i></a>
           </div>
+          <!--
           <div class="project-card">
             <img src="project2.jpg" alt="Project 2" />
-            <h3>Another Example</h3>
+            <h3>Another Project</h3>
             <p>A customizable portfolio template for creatives</p>
-            <a href="#" class="project-link">View Project</a>
+            <a href="#" class="project-link">...</a>
           </div>
+          -->
           <!-- Add more project cards as needed -->
         </div>
       </section>
