--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/profile.jpg" type="image/x-icon">
     <title>Mohamad Alhariri - Software Developer Portfolio</title>
+
+    <!--Own CSS Stylesheet-->
     <link rel="stylesheet" href="portfolio.css" />
+  
+    <!--EmailJS Setup-->
+      <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+      
     <script
       src="https://kit.fontawesome.com/1780cc454e.js"
       crossorigin="anonymous"
     ></script>
+
+    <!--Font Awsome Setup-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
